--- a/lib/jpixl_web/live/component/cell.html.leex
+++ b/lib/jpixl_web/live/component/cell.html.leex
@@ -1,5 +1,5 @@
 <div class="grid-box" phx-target="<%= @myself %>"
-     oncontextmenu="return false;" phx-hook="Clicky">
+     oncontextmenu="return false;" phx-hook="Clicky" data-ref="<%= @id %>">
     <div style="background-color: <%= @fill_color %>" class="cell-contents">
         <%= @myself.cid %>
     </div>
