--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -9,7 +9,6 @@
   width: 1024px;
   overflow: auto;
 }
-
 .grid-box {
   cursor: crosshair;
   width: 32px;
@@ -23,11 +22,23 @@
   width: 100%;
   height: 100%;
 }
+.wrapper {
+  display: flex;
+}
 .toolbar-grid {
-  width: 20%;
-  border: 1px solid red;
+  width: 300px;
 }
 .working-grid {
-  margin-left: 20%;
-  border: 1px solid blue;
+}
+.color-pick {
+  cursor: pointer;
+}
+.primary-color-view, .secondary-color-view {
+  margin-top: 32px;
+  margin-right: 32px;
+  display: inline-block;
+}
+.primary-color-view > fieldset, .secondary-color-view > fieldset {
+  width: 64px;
+  height: 64px;
 }
