--- a/lib/jpixl_web/live/page_live.html.leex
+++ b/lib/jpixl_web/live/page_live.html.leex
@@ -25,17 +25,30 @@
                         <fieldset style="height: 49px; width: 47px; background-color: <%= @secondary_color %>;">
                         </fieldset>
                     </div>
-                    <div class="secondary-color-view">
+                    <form phx-submit="update_canvas">
+                        <div class="field-row-stacked" style="width: 200px; margin-top: 64px">
+                            <label for="canvas_width">Canvas Width (pixels)</label>
+                            <input id="canvas_width" name="canvas_width" type="number" min="1" max="32" value="<%= @canvas_width %>"/>
+                        </div>
+                        <div class="field-row-stacked" style="width: 200px">
+                            <label for="canvas_height">Canvas Height (pixels)</label>
+                            <input id="canvas_height" name="canvas_height" type="number" min="1" max="32" value="<%= @canvas_height %>" />
+                        </div>
 
-                    </div>
+                        <div class="field-row-stacked" style="width: 200px">
+                            <button id="submit" type="submit">Update Canvas</button>
+                        </div>
+                    </form>
                 </div>
                 <div class="working-grid">
                     <fieldset>
                         <div class="drawing-area">
-                            <%= for row <- 1..32 do %>
-                                <%= for column <- 1..32 do %>
-                                    <%= live_component @socket, JpixlWeb.Component.Cell, id: "#{row}_#{column}" %>
-                                <% end %>
+                            <%= for row <- 1..@canvas_width do %>
+                                <div>
+                                    <%= for column <- 1..@canvas_height do %>
+                                        <%= live_component @socket, JpixlWeb.Component.Cell, id: "#{row}_#{column}" %>
+                                    <% end %>
+                                </div>
                             <% end %>
                         </div>
                     </fieldset>
