Added clear color button

--- a/lib/jpixl_web/live/component/color_palette.html.leex
+++ b/lib/jpixl_web/live/component/color_palette.html.leex
@@ -137,5 +137,10 @@
     <td oncontextmenu="return false;" class="color-pick" style="background:#fff; width:32px;" phx-hook="ColorPick" data-color="#fff" id="fff">
     </td>
 </tr>
+<tr style="height: 32px;">
+    <td oncontextmenu="return false;" class="color-pick" style="background:#fff; width:32px;" phx-hook="ColorPick" data-color="" id="clear">
+        CLEAR
+    </td>
+</tr>
 </tbody>
 </table>
