--- a/lib/jpixl_web/templates/layout/root.html.leex
+++ b/lib/jpixl_web/templates/layout/root.html.leex
@@ -9,6 +9,7 @@
     <script defer phx-track-static type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
     <link rel="stylesheet" href="https://unpkg.com/98.css" />
     <link phx-track-static rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
+    <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
   </head>
   <body>
     <%= @inner_content %>
