--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -13,6 +13,18 @@
   cursor: crosshair;
   width: 32px;
   height: 32px;
+  background-color: white;
+  margin: 0;
+  padding: 0;
+}
+.preview-area {
+  display: inline-flex;
+  flex-wrap: wrap;
+  overflow: auto;
+}
+.preview-grid-box {
+  width: 4px;
+  height: 4px;
   border: 0;
   background-color: white;
   margin: 0;
@@ -42,3 +54,17 @@
   width: 64px;
   height: 64px;
 }
+.floating-window {
+  position: fixed; /* or absolute */
+  top: 50%;
+  left: 50%;
+}
+.unselectable {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+[x-cloak] { display: none; }
